--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -194,6 +194,35 @@
                       </button>
                     </div>
                     <div class="toggle-hide border-top mt-2 pt-2">
+                      <div class="map-static-settings">
+                        <div class="row">
+                          <div class="col-12 my-2">
+                            <input
+                              class="form-control"
+                              id="cur_map_title"
+                              placeholder="Map Title"
+                            />
+                          </div>
+                          <div class="col-sm-8 my-2">
+                            <input
+                              id="cur_map_url_reward"
+                              class="form-control"
+                              placeholder="Map Reward Link"
+                            />
+                          </div>
+                          <div class="col-sm-4 my-2">
+                            <button
+                              class="btn btn-info w-100 change_map_details"
+                              title="Update Map Details"
+                            >
+                              <span class="fa fa-save"></span>
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+
+                      <hr />
+
                       <div class="particular-links text-center mt-2 mb-4">
                         <button class="btn btn-primary presetEditor">
                           <span class="fa fa-gears"></span> Preset
